--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             margin: 0;
         }
         </style>
-        <title></title>
+        <title>Le territoire d'action de la Banque Alimentaire de Touraine </title>
     </head>
     <body>
         <div id="map">
@@ -54,7 +54,7 @@
         <script>
         var map = L.map('map', {
             zoomControl:true, maxZoom:28, minZoom:1
-        }).fitBounds([[46.711628546282064,-0.8860202861415153],[47.79844440366985,1.9737636900816493]]);
+        }).fitBounds([[46.6848763859246,-0.3743180922624075],[47.77223561928711,2.3520229848549237]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -880,7 +880,7 @@
         rotationOrigin: 'center center',
         icon: L.icon({
             iconUrl: 'markers/RDC (fond blanc).svg',
-            iconSize: [15.959999999999997, 15.959999999999997]
+            iconSize: [15.959999999999999, 15.959999999999999]
         }),
                 interactive: true,
             }
@@ -944,7 +944,7 @@
         function style_Associationspartenaires37_14_0() {
             return {
                 pane: 'pane_Associationspartenaires37_14',
-                radius: 3.9999999999999987,
+                radius: 4.0,
                 opacity: 1,
                 color: 'rgba(237,95,24,1.0)',
                 dashArray: '',
@@ -1217,7 +1217,7 @@
         rotationOrigin: 'center center',
         icon: L.icon({
             iconUrl: 'markers/BA (entrepôt).svg',
-            iconSize: [22.800000000000047, 22.800000000000047]
+            iconSize: [22.799999999999997, 22.799999999999997]
         }),
                 interactive: true,
             }
@@ -1313,6 +1313,16 @@
         });
         bounds_group.addLayer(layer_RgionCentreValdeLoire_20);
         map.addLayer(layer_RgionCentreValdeLoire_20);
+            var title = new L.Control();
+            title.onAdd = function (map) {
+                this._div = L.DomUtil.create('div', 'info');
+                this.update();
+                return this._div;
+            };
+            title.update = function () {
+                this._div.innerHTML = '<h2>Le territoire d\'action de la Banque Alimentaire de Touraine </h2>';
+            };
+            title.addTo(map);
         var baseMaps = {};
         L.control.layers(baseMaps,{'<img src="legend/RgionCentreValdeLoire_20.png" /> Région Centre Val de Loire': layer_RgionCentreValdeLoire_20,'<img src="legend/IndreetLoire_19.png" /> Indre et Loire': layer_IndreetLoire_19,'<img src="legend/BACentreValdeLoire_18.png" /> BA (Centre Val de Loire)': layer_BACentreValdeLoire_18,'<img src="legend/Epiceriesitinrantespartenaires37_17.png" /> Epiceries itinérantes partenaires (37)': layer_Epiceriesitinrantespartenaires37_17,'<img src="legend/Epiceriessocialespartenaires37_16.png" /> Epiceries sociales partenaires (37)': layer_Epiceriessocialespartenaires37_16,'<img src="legend/CCASpartenaires37_15.png" /> CCAS partenaires (37)': layer_CCASpartenaires37_15,'<img src="legend/Associationspartenaires37_14.png" /> Associations partenaires (37)': layer_Associationspartenaires37_14,'<img src="legend/LesRestosduCoeur37_13.png" /> Les Restos du Coeur (37) ': layer_LesRestosduCoeur37_13,'<img src="legend/SecoursPopulaire37_12.png" /> Secours Populaire (37)': layer_SecoursPopulaire37_12,'<img src="legend/SSVP37_11.png" /> SSVP (37)': layer_SSVP37_11,'<img src="legend/SecoursCatholique37_10.png" /> Secours Catholique (37)': layer_SecoursCatholique37_10,'<img src="legend/Communesavecaidealimentaire_9.png" /> Communes avec aide alimentaire ': layer_Communesavecaidealimentaire_9,'<img src="legend/ZonesblanchesdelaidealimentaireIndreetLoire_8.png" /> Zones blanches de l\'aide alimentaire (Indre et Loire) ': layer_ZonesblanchesdelaidealimentaireIndreetLoire_8,'<img src="legend/ZRR_7.png" /> ZRR ': layer_ZRR_7,'Médiane du niveau de vie <br /><table><tr><td style="text-align: center;"><img src="legend/Mdianeduniveaudevie_6_15430206480.png" /></td><td>15430 - 20648</td></tr><tr><td style="text-align: center;"><img src="legend/Mdianeduniveaudevie_6_20648217801.png" /></td><td>20648 - 21780</td></tr><tr><td style="text-align: center;"><img src="legend/Mdianeduniveaudevie_6_21780228642.png" /></td><td>21780 - 22864</td></tr><tr><td style="text-align: center;"><img src="legend/Mdianeduniveaudevie_6_22864241443.png" /></td><td>22864 - 24144</td></tr><tr><td style="text-align: center;"><img src="legend/Mdianeduniveaudevie_6_24144334404.png" /></td><td>24144 - 33440</td></tr></table>': layer_Mdianeduniveaudevie_6,'Taux de chômage <br /><table><tr><td style="text-align: center;"><img src="legend/Tauxdechmage_5_0760.png" /></td><td>0 - 7,6</td></tr><tr><td style="text-align: center;"><img src="legend/Tauxdechmage_5_76971.png" /></td><td>7,6 - 9,7</td></tr><tr><td style="text-align: center;"><img src="legend/Tauxdechmage_5_971242.png" /></td><td>9,7 - 12,4</td></tr><tr><td style="text-align: center;"><img src="legend/Tauxdechmage_5_1244063.png" /></td><td>12,4 - 40,6</td></tr></table>': layer_Tauxdechmage_5,'PAT Indre et Loire<br /><table><tr><td style="text-align: center;"><img src="legend/PATIndreetLoire_4_CCgatineetPaysdeRacan0.png" /></td><td>CC gatine et Pays de Racan</td></tr><tr><td style="text-align: center;"><img src="legend/PATIndreetLoire_4_CCTouraineValléedelIndre1.png" /></td><td>CC Touraine Vallée de l\'Indre</td></tr><tr><td style="text-align: center;"><img src="legend/PATIndreetLoire_4_CommunautédeCommunesLochesSudTouraine2.png" /></td><td>Communauté de Communes Loches Sud Touraine</td></tr><tr><td style="text-align: center;"><img src="legend/PATIndreetLoire_4_ToursMétropole3.png" /></td><td>Tours Métropole</td></tr></table>': layer_PATIndreetLoire_4,'<img src="legend/PATdpartemental_3.png" /> PAT départemental': layer_PATdpartemental_3,'<img src="legend/CommunesIndreetLoire_2.png" /> Communes (Indre et Loire)': layer_CommunesIndreetLoire_2,'<img src="legend/EPCI37_1.png" /> EPCI 37': layer_EPCI37_1,"Google Road": layer_GoogleRoad_0,},{collapsed:false}).addTo(map);
         setBounds();
